// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`New password page New password page renders 1`] = `
<div>
  <Navigation />
  <NewPasswordForm />
</div>
`;

exports[`Regi business page Register business page renders 1`] = `
<div>
  <Navigation />
  <NewPasswordForm />
</div>
`;

exports[`Register business page Register business page renders 1`] = `
<div>
  <Navigation />
  <RegisterBusinessForm />
</div>
`;
